refactoring project template and portfolio files to use mdx instead of md

--- a/content/portfolio/kanricho/index.mdx
+++ b/content/portfolio/kanricho/index.mdx
@@ -12,18 +12,19 @@ images: 'images/thumbnails/portfolio/kanricho.jpg'
 <h1> Kanricho.com</h1>
 
 Kanricho is a task management app.
-<br>
-<br>
+<br/>
+<br/>
 
 ## What I did
 
 <div class="description">
 This app was created to experiement with the tech stack and as a tool that I can use with specific features based on my requirements.
-<br>
-<br>
+<br/>
+<br/>
 <li>Create, update, delete boards, lists and cards per user.</li>
-<li> Account creation and permission for user to update/delete/create their boards  </li></div>
-<br>
+<li> Account creation and permission for user to update/delete/create their boards  </li>
+</div>
+<br/>
 
 ## Libraries / Tools
 
