refactor post template and files to use mdx

--- a/content/posts/1-01-2019--things-i-would-like-to-know-more/index.mdx
+++ b/content/posts/1-01-2019--things-i-would-like-to-know-more/index.mdx
@@ -1,4 +1,5 @@
 ---
+type: 'post'
 path: '/things-i-want-to-know-more-about-by-end-of-2019'
 date: '2019/01/01'
 title: 'Things I Would Like to know more about by end of 2019'
