--- a/content/posts/14-04-19--graphql-alias/index.mdx
+++ b/content/posts/14-04-19--graphql-alias/index.mdx
@@ -1,4 +1,5 @@
 ---
+type: 'post'
 path: '/gatsby-tip-on-running-multiple-graphql-queries'
 date: '2019/04/15'
 title: 'Gatsby tip on running multiple queries (GraphQL aliases)'
