--- a/content/posts/3-11-18--verifying-gatsby/index.mdx
+++ b/content/posts/3-11-18--verifying-gatsby/index.mdx
@@ -1,4 +1,5 @@
 ---
+type: 'post'
 path: '/verifying-gatsby-in-search-console'
 date: '2018/11/03'
 title: 'How to verify a gatsby site in search console'
