--- a/content/posts/22-03-19--understanding-redux/index.mdx
+++ b/content/posts/22-03-19--understanding-redux/index.mdx
@@ -1,4 +1,5 @@
 ---
+type: 'post'
 path: '/understanding-redux'
 date: '2019/03/22'
 title: 'Understanding Redux by doing a basic implementation of the store'
