--- a/content/posts/26-12-18--create-pages/index.mdx
+++ b/content/posts/26-12-18--create-pages/index.mdx
@@ -1,6 +1,6 @@
 ---
 type: 'post'
-path: '/gatsby-create-pages'
+path: '/blog/gatsby-create-pages'
 date: '2018/12/26'
 title: 'How to create pages dynamically in Gatsby'
 tags: ['js, gatsby']
@@ -25,7 +25,7 @@ To create pages you would need to do the following to make it happen dynamically
 
 By installing the following plugins
 
-```text
+```shell
 npm install --save gatsby-source-filesystem gatsby-transformer-remark
 ```
 
