--- a/content/posts/14-04-19--graphql-alias/index.mdx
+++ b/content/posts/14-04-19--graphql-alias/index.mdx
@@ -1,6 +1,6 @@
 ---
 type: 'post'
-path: '/gatsby-tip-on-running-multiple-graphql-queries'
+path: '/blog/gatsby-tip-on-running-multiple-graphql-queries'
 date: '2019/04/15'
 title: 'Gatsby tip on running multiple queries (GraphQL aliases)'
 tags: ['graphql, js, gatsby']
@@ -21,7 +21,7 @@ Say you want to fetch specific data in one page based on an argument or a condit
 
 ## Example
 
-```javascript
+```graphql
 export const query = graphql`
   query {
     post: allMarkdownRemark(
