--- a/content/posts/26-12-18--create-pages/index.mdx
+++ b/content/posts/26-12-18--create-pages/index.mdx
@@ -1,6 +1,6 @@
 ---
 type: 'post'
-path: '/blog/gatsby-create-pages'
+path: '/gatsby-create-pages'
 date: '2018/12/26'
 title: 'How to create pages dynamically in Gatsby'
 tags: ['js, gatsby']
