--- a/content/posts/14-02-19--react-context/index.mdx
+++ b/content/posts/14-02-19--react-context/index.mdx
@@ -1,6 +1,6 @@
 ---
 type: 'post'
-path: '/blog/react-context'
+path: '/react-context'
 date: '2019/02/14'
 title: 'React Context'
 tags: ['js, react']
