--- a/content/posts/27-01-20--syntax-highlighting/index.mdx
+++ b/content/posts/27-01-20--syntax-highlighting/index.mdx
@@ -1,7 +1,7 @@
 ---
 type: 'post'
 path: '/blog/syntax-highlighting-in-gatsby-mdx'
-date: '2020/01/01'
+date: '2020/01/27'
 title: 'Syntax Highlighting in Gatsby MDX'
 tags: ['js, gatsby']
 summary: 'this post shows how to use prism-react-renderer to enable syntax highlighting for Gatsby MDX files'
@@ -11,7 +11,7 @@ imageAuthor: 'Estée Janssens'
 keywords: ['syntax highlighting, prism, MDX syntax highlight']
 ---
 
-In this post we will be looking into how to enable syntax highlighting for Gatsby MDX files using [prism-react-renderer](https://github.com/FormidableLabs/prism-react-renderer)
+In this post, we will be looking into how to enable syntax highlighting for Gatsby MDX files using [prism-react-renderer](https://github.com/FormidableLabs/prism-react-renderer)
 
 first, we need to install a couple of modules
 
@@ -19,7 +19,7 @@ first, we need to install a couple of modules
 npm i prism-react-renderer @mdx-js/react
 ```
 
-Then, we create the component which we will use in the `<MDXProvider/>` that is going to provider a wrapper replacement for our application.
+Then, we create the component which we will use in the `<MDXProvider/>` that is going to provide a wrapper replacement for our application.
 
 ```javascript
 const component = {
@@ -53,7 +53,7 @@ const component = {
 };
 ```
 
-To render the code block we added in MDX file to show up on the page we will access props of the child component of `<pre/>` component as markdown code blocks gets compiled into a `<pre/>` component wrapping the code component.
+To render the code block we added in MDX file to show up on the page we will access props of the child component of `<pre/>` component as markdown code blocks get compiled into a `<pre/>` component wrapping the code component.
 We can dive a level deeper to get the code by using `props.children.props.children`, as you can see from the screenshot below.
 
 ![code-block](./code-block.png)
@@ -67,7 +67,7 @@ console.log(`Hello ${text}`)
 ```
 ````
 
-To get the language defined in the code component in MDX file, we will drill down at `props.children.props.className`, if there is no class name then we might have not put a language on our code block in which case we will default to empty strings.
+To get the language defined in the code component in the MDX file, we will drill down at `props.children.props.className`, if there is no class name then we might have not put a language on our code block in which case we will default to empty strings.
 Then we use a name capture group in regex with the name lang to get the language of the language-className. if there are matches
 
 ```javascript
@@ -116,3 +116,5 @@ export const wrapRootElement = ({ element }) => {
   return <MDXProvider components={component}>{element}</MDXProvider>;
 };
 ```
+
+**Following the post and you can find a starter repo [here](https://github.com/gabroun/gatsby-mdx-starter) that shows usage of mdx pages and syntax highlighting**
