--- a/content/posts/16-01-20--create-pages-with-MDX/index.mdx
+++ b/content/posts/16-01-20--create-pages-with-MDX/index.mdx
@@ -1,6 +1,6 @@
 ---
 type: 'post'
-path: '/gatsby-create-pages-with-mdx'
+path: '/blog/gatsby-create-pages-with-mdx'
 date: '2020/01/16'
 title: 'How to create pages dynamically in Gatsby using MDX'
 tags: ['js, gatsby']
@@ -107,7 +107,7 @@ exports.createPages = async ({ actions, graphql, reporter }) => {
 
   const pages = result.data.allMdx.nodes;
 
-  pages.forEach(page => {
+  pages.forEach((page) => {
     actions.createPage({
       path: page.frontmatter.path,
       component: require.resolve('./src/templates/postTemplate.js'),
