adding redirects for old routes to new routes with createRedirect

--- a/content/posts/3-11-18--verifying-gatsby/index.mdx
+++ b/content/posts/3-11-18--verifying-gatsby/index.mdx
@@ -9,6 +9,11 @@ images: 'images/thumbnails/checklist.jpeg'
 imageAuthorID: '@glenncarstenspeters'
 imageAuthor: 'Glenn Carstens-Peters'
 keywords: ['gatsby', 'google', 'search console']
+redirects:
+  [
+    '/verifying-gatsby-in-search-console',
+    '/blog/verifying-gatsby-in-search-console',
+  ]
 ---
 
 In order to verify you gatsby site, first you would need to use one of the verification method that the search console suggests. Below you can see the options you can select for verifying the site.
