add redirect array to posts

--- a/content/posts/14-02-19--react-context/index.mdx
+++ b/content/posts/14-02-19--react-context/index.mdx
@@ -9,6 +9,7 @@ images: 'images/thumbnails/containers.jpeg'
 imageAuthorID: '@federize'
 imageAuthor: 'Federico Beccari'
 keywords: ['react', 'react context', 'js']
+redirects: ['/react-context', '/blog/react-context']
 ---
 
 In this post we will be talking about `Context` API which was introduced in React 16, and how you can use them.
