--- a/content/posts/14-04-19--graphql-alias/index.mdx
+++ b/content/posts/14-04-19--graphql-alias/index.mdx
@@ -15,6 +15,11 @@ keywords:
     'graphql multiple queries',
     'multiple graphql queries',
   ]
+redirects:
+  [
+    '/gatsby-tip-on-running-multiple-graphql-queries',
+    '/blog/gatsby-tip-on-running-multiple-graphql-queries',
+  ]
 ---
 
 Say you want to fetch specific data in one page based on an argument or a condition which can't be run using one query as you can't query the same field with different condition or argument. One way of doing that by using [GraphQL aliases](https://graphql.org/learn/queries/#aliases) which you can use to rename the returned dataset to anything you want.
