--- a/content/posts/16-01-20--create-pages-with-MDX/index.mdx
+++ b/content/posts/16-01-20--create-pages-with-MDX/index.mdx
@@ -10,6 +10,11 @@ images: 'images/thumbnails/artJournal.jpeg'
 imageAuthorID: '@esteejanssens'
 imageAuthor: 'Estée Janssens'
 keywords: ['create pages, gatsby create page, Gatsby MDX', 'gatsby-plugin-mdx']
+redirects:
+  [
+    '/gatsby-create-pages-with-mdx',
+    '/blog/gatsby-create-pages-with-mdx',
+  ]
 ---
 
 In this post, we will be looking into how to create pages programmatically using MDX in Gatsby.
