--- a/content/posts/18-02-20--intro-to-algolia-in-gatsby-part-i/index.mdx
+++ b/content/posts/18-02-20--intro-to-algolia-in-gatsby-part-i/index.mdx
@@ -9,6 +9,11 @@ images: 'images/thumbnails/searching.jpeg'
 imageAuthorID: '@amartino20'
 imageAuthor: 'Anthony Martino'
 keywords: ['Algolia, Gatsby, adding algolia to gatsby']
+redirects:
+  [
+    '/intro-to-algolia-in-gatsby-part-i',
+    '/blog/intro-to-algolia-in-gatsby-part-i',
+  ]
 ---
 
 In this post, we will be looking into how to add algolia search to your gatsby site. we will see how to configure Algolia in gatsby and add Algolia's built-in component..
