--- a/content/posts/22-03-19--understanding-redux/index.mdx
+++ b/content/posts/22-03-19--understanding-redux/index.mdx
@@ -9,6 +9,7 @@ images: 'images/thumbnails/wearingGlasses.jpeg'
 imageAuthorID: '@nate_dumlao'
 imageAuthor: 'Nathan Dumlao'
 keywords: ['redux', 'js']
+redirects: ['/understanding-redux', '/blog/understanding-redux']
 ---
 
 In this post we will be re-writing a simplified version of Redux store to understand how it works.
