--- a/content/posts/26-12-18--create-pages/index.mdx
+++ b/content/posts/26-12-18--create-pages/index.mdx
@@ -9,6 +9,7 @@ images: 'images/thumbnails/whiteOpenBook.jpeg'
 imageAuthorID: '@kadh'
 imageAuthor: 'Kira auf der Heide'
 keywords: ['gatsby', 'createpage', 'dynamic pages', 'create pages']
+redirects: ['/gatsby-create-pages', '/blog/gatsby-create-pages']
 ---
 
 ### Updated: 24th of April
