--- a/content/posts/27-01-20--syntax-highlighting/index.mdx
+++ b/content/posts/27-01-20--syntax-highlighting/index.mdx
@@ -9,6 +9,11 @@ images: 'images/thumbnails/text-highlight.jpeg'
 imageAuthorID: '@esteejanssens'
 imageAuthor: 'Estée Janssens'
 keywords: ['syntax highlighting, prism, MDX syntax highlight']
+redirects:
+  [
+    '/syntax-highlighting-in-gatsby-mdx',
+    '/blog/syntax-highlighting-in-gatsby-mdx',
+  ]
 ---
 
 In this post, we will be looking into how to enable syntax highlighting for Gatsby MDX files using [prism-react-renderer](https://github.com/FormidableLabs/prism-react-renderer)
