Seo fix, adding trailing slashes to url

--- a/content/posts/22-03-19--understanding-redux/index.mdx
+++ b/content/posts/22-03-19--understanding-redux/index.mdx
@@ -1,6 +1,6 @@
 ---
 type: 'post'
-path: '/blog/understanding-redux'
+path: '/blog/understanding-redux/'
 date: '2019/03/22'
 title: 'Understanding Redux by doing a basic implementation of the store'
 tags: ['redux, js']
@@ -9,7 +9,7 @@ images: 'images/thumbnails/wearingGlasses.jpeg'
 imageAuthorID: '@nate_dumlao'
 imageAuthor: 'Nathan Dumlao'
 keywords: ['redux', 'js']
-redirects: ['/understanding-redux', '/blog/understanding-redux']
+redirects: ['/understanding-redux/', '/blog/understanding-redux/']
 ---
 
 In this post we will be re-writing a simplified version of Redux store to understand how it works.
