--- a/content/posts/26-12-18--create-pages/index.mdx
+++ b/content/posts/26-12-18--create-pages/index.mdx
@@ -1,6 +1,6 @@
 ---
 type: 'post'
-path: '/blog/gatsby-create-pages'
+path: '/blog/gatsby-create-pages/'
 date: '2018/12/26'
 title: 'How to create pages dynamically in Gatsby'
 tags: ['js, gatsby']
@@ -9,7 +9,7 @@ images: 'images/thumbnails/whiteOpenBook.jpeg'
 imageAuthorID: '@kadh'
 imageAuthor: 'Kira auf der Heide'
 keywords: ['gatsby', 'createpage', 'dynamic pages', 'create pages']
-redirects: ['/gatsby-create-pages', '/blog/gatsby-create-pages']
+redirects: ['/gatsby-create-pages/', '/blog/gatsby-create-pages/']
 ---
 
 ### Updated: 24th of April
