--- a/content/posts/hello-world/index.mdx
+++ b/content/posts/hello-world/index.mdx
@@ -1,6 +1,6 @@
 ---
 type: 'post'
-path: '/blog/hello-world'
+path: '/blog/hello-world/'
 date: '2018/10/29'
 title: 'Hello World'
 tags: ['js']
@@ -9,7 +9,7 @@ images: 'images/thumbnails/helloWorld.jpeg'
 imageAuthorID: '@johnnyabroad'
 imageAuthor: 'Jean-Pierre Brungs'
 keywords: ['hello world, intro, description']
-redirects: ['/hello-world', '/blog/hello-world']
+redirects: ['/hello-world/', '/blog/hello-world'/]
 ---
 
 Recently, I have decided to rebuild my website to use ReactJS as I got interested in it. As a result, this is the first release of my website and going to improve it and add more features as I go along in improving my knowledge of React.
