adding coloured tags to blog page and updating mdx code block highlight and theme and updating blog post styles

--- a/content/posts/16-01-20--create-pages-with-MDX/index.mdx
+++ b/content/posts/16-01-20--create-pages-with-MDX/index.mdx
@@ -3,7 +3,7 @@ type: 'post'
 path: '/blog/gatsby-create-pages-with-mdx/'
 date: '2020/01/16'
 title: 'How to create pages dynamically in Gatsby using MDX'
-tags: ['js, gatsby']
+tags: ['javascript', 'gatsby']
 summary: 'In this post, we will be looking into how to create pages
 dynamically using MDX'
 images: 'images/thumbnails/artJournal.jpeg'
