--- a/content/posts/27-01-20--syntax-highlighting/index.mdx
+++ b/content/posts/27-01-20--syntax-highlighting/index.mdx
@@ -3,7 +3,7 @@ type: 'post'
 path: '/blog/syntax-highlighting-in-gatsby-mdx/'
 date: '2020/01/27'
 title: 'Syntax Highlighting in Gatsby MDX'
-tags: ['js, gatsby']
+tags: ['javascript', 'gatsby']
 summary: 'this post shows how to use prism-react-renderer to enable syntax highlighting for Gatsby MDX files'
 images: 'images/thumbnails/text-highlight.jpeg'
 imageAuthorID: '@esteejanssens'
