--- a/content/posts/3-11-18--verifying-gatsby/index.mdx
+++ b/content/posts/3-11-18--verifying-gatsby/index.mdx
@@ -3,7 +3,7 @@ type: 'post'
 path: '/blog/verifying-gatsby-in-search-console/'
 date: '2018/11/03'
 title: 'How to verify a gatsby site in search console'
-tags: ['js, gatsby']
+tags: ['javascript', 'gatsby']
 summary: 'In this post, I will be talking about verifying gatsby site in search console'
 images: 'images/thumbnails/checklist.jpeg'
 imageAuthorID: '@glenncarstenspeters'
