--- a/content/posts/6-08-2020--vue-meta-data/index.mdx
+++ b/content/posts/6-08-2020--vue-meta-data/index.mdx
@@ -3,7 +3,7 @@ type: 'post'
 path: '/blog/how-to-add-metadata-in-vue-using-vue-meta/'
 date: '2020/08/06'
 title: 'How to Add MetaData in Vue Using Vue-Meta'
-tags: ['js, vue']
+tags: ['javascript', 'vue']
 summary: 'In this post, we will be looking into how to add vue-meta to our project and use it to handle metadata inside the component'
 images: 'images/thumbnails/imacScreen.jpeg'
 imageAuthorID: '@kaleidico'
@@ -13,7 +13,7 @@ keywords: ['vue, vue-meta, vue metadata']
 
 ## What is vue-meta?
 
-“vue-meta” is a module that offers a Vue plugin which allows us to add metadata from component dynamically.
+> “vue-meta” is a module that offers a Vue plugin which allows us to add metadata from component dynamically.
 
 This means in projects where we have multiple routes and we want to update the meta tags for SEO dynamically based on the route currently rendered on the page, vue-meta will handle that for us while giving us control over the app metadata.
 
