--- a/content/posts/hello-world/index.mdx
+++ b/content/posts/hello-world/index.mdx
@@ -3,7 +3,7 @@ type: 'post'
 path: '/blog/hello-world/'
 date: '2018/10/29'
 title: 'Hello World'
-tags: ['js']
+tags: ['general']
 summary: "A description about my site, and what's coming in this website"
 images: 'images/thumbnails/helloWorld.jpeg'
 imageAuthorID: '@johnnyabroad'
