--- a/content/posts/14-02-19--react-context/index.mdx
+++ b/content/posts/14-02-19--react-context/index.mdx
@@ -3,7 +3,7 @@ type: 'post'
 path: '/blog/react-context/'
 date: '2019/02/14'
 title: 'React Context'
-tags: ['js, react']
+tags: ['javascript', 'react']
 summary: 'In this post, we will be looking into React Context API'
 images: 'images/thumbnails/containers.jpeg'
 imageAuthorID: '@federize'
