--- a/content/posts/14-04-19--graphql-alias/index.mdx
+++ b/content/posts/14-04-19--graphql-alias/index.mdx
@@ -3,7 +3,7 @@ type: 'post'
 path: '/blog/gatsby-tip-on-running-multiple-graphql-queries/'
 date: '2019/04/15'
 title: 'Gatsby tip on running multiple queries (GraphQL aliases)'
-tags: ['graphql, js, gatsby']
+tags: ['graphql', 'javascript', 'gatsby']
 summary: 'A quick tip on how to run multiple queries in one component/page using graphql aliases'
 images: 'images/thumbnails/pairProgramming.jpeg'
 imageAuthorID: '@alvaroreyes'
@@ -26,7 +26,7 @@ Say you want to fetch specific data in one page based on an argument or a condit
 
 ## Example
 
-```graphql
+```graphql {3,23}
 export const query = graphql`
   query {
     post: allMarkdownRemark(
