--- a/content/posts/22-03-19--understanding-redux/index.mdx
+++ b/content/posts/22-03-19--understanding-redux/index.mdx
@@ -3,7 +3,7 @@ type: 'post'
 path: '/blog/understanding-redux/'
 date: '2019/03/22'
 title: 'Understanding Redux by doing a basic implementation of the store'
-tags: ['redux, js']
+tags: ['redux', 'javascript']
 summary: 'reimplemention of redux library store to learn how it works'
 images: 'images/thumbnails/wearingGlasses.jpeg'
 imageAuthorID: '@nate_dumlao'
