--- a/content/posts/26-12-18--create-pages/index.mdx
+++ b/content/posts/26-12-18--create-pages/index.mdx
@@ -3,7 +3,7 @@ type: 'post'
 path: '/blog/gatsby-create-pages/'
 date: '2018/12/26'
 title: 'How to create pages dynamically in Gatsby'
-tags: ['js, gatsby']
+tags: ['javascript', 'gatsby']
 summary: 'In this post, we will be looking into how to create pages using Gatsby API createPages'
 images: 'images/thumbnails/whiteOpenBook.jpeg'
 imageAuthorID: '@kadh'
