adding last updated field, styling signup component and thanks page, update post template styles

--- a/content/posts/29-09-20--programmatic-redirects/index.mdx
+++ b/content/posts/29-09-20--programmatic-redirects/index.mdx
@@ -2,6 +2,7 @@
 type: 'post'
 path: '/blog/programmatic-redirects-in-gatsby/'
 date: '2020/09/29'
+lastUpdated: ''
 title: 'Programmatic Redirects in Gatsby'
 tags: ['javascript', 'gatsby']
 summary: 'In this post, we will be looking into how we can add redirects programmatically to our site'
