table of content component and styles

--- a/content/posts/29-09-20--programmatic-redirects/index.mdx
+++ b/content/posts/29-09-20--programmatic-redirects/index.mdx
@@ -44,7 +44,7 @@ npm i gatsby-plugin-meta-redirect
 
 And then inside `gatsby-config.js` we add the plugin to our plugins array
 
-```javascript
+```javascript:title=gatsby-config.js
 plugins: [`gatsby-plugin-netlify`];
 ```
 
