--- a/content/posts/29-09-20--programmatic-redirects/index.mdx
+++ b/content/posts/29-09-20--programmatic-redirects/index.mdx
@@ -1,25 +1,25 @@
 ---
-type: 'post'
-path: '/blog/programmatic-redirects-in-gatsby/'
-date: '2020/09/29'
-lastUpdated: ''
-title: 'Programmatic Redirects in Gatsby'
-tags: ['javascript', 'gatsby']
-summary: 'In this post, we will be looking into how we can add redirects programmatically to our site'
-images: 'images/thumbnails/roadSplit.jpeg'
-imageAuthorID: '@pinewatt'
-imageAuthor: 'Pine Watt'
+type: "post"
+path: "/blog/programmatic-redirects-in-gatsby/"
+date: "2020/09/29"
+lastUpdated: ""
+title: "Programmatic Redirects in Gatsby"
+tags: ["javascript", "gatsby"]
+summary: "In this post, we will be looking into how we can add redirects programmatically to our site"
+images: "images/thumbnails/roadSplit.jpeg"
+imageAuthorID: "@pinewatt"
+imageAuthor: "Pine Watt"
 keywords:
-  ['gatsby redirects, programmatic redirects, gatsby programmatic redirects']
+  ["gatsby redirects, programmatic redirects, gatsby programmatic redirects"]
 ---
 
-Say we wanted to migrate our posts’ route from one route to another in our site but we don’t want to go through the troubles of updating it everywhere else where the URL has been shared. As we want to avoid the issues of 404 pages if the user has visited the old URL route or in case these old routes have been indexed in Google.
+Say we wanted to migrate our posts’ route from one route to another in our site but we do not want to go through the troubles of updating it everywhere else where the URL has been shared. As we want to avoid the issues of 404 pages if the user has visited the old URL route or in case these old routes have been indexed in Google.
 
 In order to solve this issue, we will need to look into how we can redirect users programmatically to the new URL.
 
 ---
 
-**So in this post, we will be looking into how we can add redirects programmatically to our site especially if you are using Netlify.
+**So in this post, we will be looking into how we can add redirects programmatically to our site especially if you are using <em>Netlify.</em>
 There are 2 types of redirects**
 
 ## 1. Using Gatsby createRedirect
@@ -58,7 +58,7 @@ Inside the function, we call `createRedirect` method which takes an options obje
 
 in the example below, we can see how we can destruct createRedirect from actions object and call it to create the redirects
 
-```javascript {2,26-30}
+```javascript:title=gatsby-node.js {2,26-30}
 exports.createPages = async ({ actions, graphql, reporter }) => {
   const { createRedirect } = actions;
   const result = await graphql(
@@ -78,7 +78,7 @@ exports.createPages = async ({ actions, graphql, reporter }) => {
     `
   );
   if (result.errors) {
-    reporter.panic('failed to create posts ', result.errors);
+    reporter.panic("failed to create posts ", result.errors);
   }
   const pages = result.data.allMdx.nodes;
   pages.forEach((page) => {
@@ -93,7 +93,7 @@ exports.createPages = async ({ actions, graphql, reporter }) => {
     }
     actions.createPage({
       path: page.frontmatter.path,
-      component: require.resolve('./src/templates/postTemplate.js'),
+      component: require.resolve("./src/templates/postTemplate.js"),
       context: {
         pathSlug: page.frontmatter.path,
         image: `resources/${page.frontmatter.images}`,
